# Yasuda

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Cell.h  CellInfo.h  Clock.h  Collision.h  CollisionInfo.h  DEM.h  DataIO.h  Field.h  FieldInfo.h  LongRange.h  LongRangeParticleList.h  Object.h  ObjectInfo.h  Output.h  OutputAVS.h  OutputVTK.h  Particle.h  ParticleInfo.h  Scope.h  Vector.h
py/: sph.py
py/_MEGraMa_modules/: MEGraMa_mag.py  MEGraMa_plural.py  MEGraMa_pos.py  MEGraMa_velo.py  functions.py
src/: Cell.cpp  Collision.cpp  DEM.cpp  DEM.h  Field.cpp  LongRange.cpp  LongRange.h  LongRangeParticleList.cpp  LongRangeParticleList.h  Object.cpp  ObjectInfo.h  Output.cpp  OutputAVS.cpp  OutputAVS.h  OutputGeneral.cpp  OutputGeneral.h  OutputVTK.cpp  OutputVTK.h  Particle.cpp  Particle.h  Profiler.h  main.cpp
src_dem/: CMakeLists.txt  Cell.cpp  Cell.h  CellInfo.h  Collision.cpp  Collision.h  CollisionInfo.h  DEM.cpp  DEM.h  Field.cpp  Field.h  FieldInfo.h  Object.h  OutputAVS.cpp  Particle.cpp  ParticleInfo.h  Scope.h
src_ele/: Ele_Calc.cpp  Ele_Calc.h  Ele_Calc_3D.cpp  Ele_Calc_3D.h  Profiler_3D.h  main.cpp  main_3D.cpp
src_mag/: Mag_Cal_tmpc.h  Mag_Calc.cpp  Mag_Calc_tmp.cpp  main.cpp
src_ptcl/: CMakeLists.txt  DataIO.h  main.cpp  run.cpp  run.h  run_tmmmmp.cpp
src_ptclgen/: CMakeLists.txt  DataIO.h  Generator.cpp  Generator.h  ParticleInfo copy.h  Vector.h  main.cpp
test/: 1%_240ms_180ms_100s.inidem  1%_240ms_240ms_100s.inidem  1%_240ms_480ms_100s.inidem  2_5%_240ms_480ms_100s_10_0_2.inidem  2_5%_240ms_480ms_100s_10_0_5.inidem  2_5%_240ms_480ms_100s_1_0_2.inidem  2_5%_240ms_480ms_100s_1_0_5.inidem  2_5%_240ms_480ms_100s_5_0_2.inidem  2_5%_240ms_480ms_100s_5_0_5.inidem  2_5%_240ms_480ms_200s_10.inidem  2_5%_240ms_480ms_200s_1_halfhole.inidem  2_5%_240ms_480ms_200s_5.inidem  2_5%_240ms_480ms_600s_5.inidem  2_5%_240ms_480ms_600s_halfhole.inidem  5%_240ms_180ms_100s.inidem  test.ptclgen  test_1.inidem  test_ptcl.csv
test/input/: 1570_ptcl.csv  310_ptcl.csv  750_1_ptcl.csv  750_2_ptcl.csv  obj1.objdem  (+2 more)
(+6 files in other folders)
